Use ARM GitHub runners

--- a/.github/workflows/linux-arm-opengl.yml
+++ b/.github/workflows/linux-arm-opengl.yml
@@ -10,138 +10,86 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    name: Build on ${{ matrix.distro }} ${{ matrix.arch }}
 
-    # Run steps for both armv6 and aarch64
-    strategy:
-      matrix:
-        include:
-          - arch: aarch64
-            distro: ubuntu22.04
-          - arch: armv7
-            distro: ubuntu22.04
+    runs-on: ubuntu-22.04-arm
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: uraimo/run-on-arch-action@v2
-        name: Run Tests in ${{ matrix.distro }} ${{ matrix.arch }}
-        id: build
-        with:
-          arch: ${{ matrix.arch }}
-          distro: ${{ matrix.distro }}
+    - uses: actions/checkout@v3
 
-          # Not required, but speeds up builds
-          githubToken: ${{ github.token }}
+    - name: Apt Update
+      run: sudo apt update
+    - name: Apt Install
+      run: sudo apt-get install libasound2-dev libxinerama-dev libxrandr-dev libgl1-mesa-dev libxi-dev libxcursor-dev libudev-dev libwayland-dev wayland-protocols libxkbcommon-dev ninja-build --yes --quiet
 
-          # The shell to run commands with in the container
-          shell: /bin/bash
+    - name: Get Submodules
+      run: ./get_dlc
 
-          # Install some dependencies in the container. This speeds up builds if
-          # you are also using githubToken. Any dependencies installed here will
-          # be part of the container image that gets cached, so subsequent
-          # builds don't have to re-install them. The image layer is cached
-          # publicly in your project's package repository, so it is vital that
-          # no secrets are present in the container state or logs.
-          install: |
-              apt-get update -y -q
-              apt-get upgrade -y -q
-              apt-get install -y -q libasound2-dev libxinerama-dev libxrandr-dev libgl1-mesa-dev libxi-dev libxcursor-dev libudev-dev git build-essential imagemagick xvfb libwayland-dev wayland-protocols libxkbcommon-dev ninja-build
-
-          # Produce a binary artifact and place it in the mounted volume
-          run: |
-            echo " * Make Git happy"
-            git config --global --add safe.directory /home/runner/work/Kinc-Samples/Kinc-Samples
-            git config --global --add safe.directory /home/runner/work/Kinc-Samples/Kinc-Samples/Kinc
-            git config --global --add safe.directory /home/runner/work/Kinc-Samples/Kinc-Samples/Kinc/Tools/linux_arm
-            git config --global --add safe.directory /home/runner/work/Kinc-Samples/Kinc-Samples/Kinc/Tools/linux_arm64
-            echo " * Get Submodules"
-            ./get_dlc
-            echo " * Compile Shader"
-            cd Shader
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile Texture"
-            cd Texture
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile MultiWindow"
-            cd MultiWindow
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile ComputeShader"
-            cd ComputeShader
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile TextureArray"
-            cd TextureArray
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile ShaderG5"
-            cd ShaderG5
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 00_empty"
-            cd 00_empty
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 01_triangle"
-            cd 01_triangle
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 02_matrix"
-            cd 02_matrix
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 03_colored_cube"
-            cd 03_colored_cube
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 04_textured_cube"
-            cd 04_textured_cube
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 05_camera_controls"
-            cd 05_camera_controls
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 06_render_targets"
-            cd 06_render_targets
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 07_multiple_render_targets"
-            cd 07_multiple_render_targets
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 08_float_render_targets"
-            cd 08_float_render_targets
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 09_depth_render_targets"
-            cd 09_depth_render_targets
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 10_cubemap"
-            cd 10_cubemap
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 11_instanced_rendering"
-            cd 11_instanced_rendering
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 12_set_render_target_depth"
-            cd 12_set_render_target_depth
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 13_generate_mipmaps"
-            cd 13_generate_mipmaps
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 14_set_mipmap"
-            cd 14_set_mipmap
-            ../Kinc/make -g opengl --compile
-            cd ..
-            echo " * Compile 15_deinterleaved_buffers"
-            cd 15_deinterleaved_buffers
-            ../Kinc/make -g opengl --compile
-            cd ..
+    - name: Compile Shader
+      working-directory: Shader
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile Texture
+      working-directory: Texture
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile MultiWindow
+      working-directory: MultiWindow
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile ComputeShader
+      working-directory: ComputeShader
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile TextureArray
+      working-directory: TextureArray
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile ShaderG5
+      working-directory: ShaderG5
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile RuntimeShaderCompilation
+      working-directory: RuntimeShaderCompilation
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 00_empty
+      working-directory: 00_empty
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 01_triangle
+      working-directory: 01_triangle
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 02_matrix
+      working-directory: 02_matrix
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 03_colored_cube
+      working-directory: 03_colored_cube
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 04_textured_cube
+      working-directory: 04_textured_cube
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 05_camera_controls
+      working-directory: 05_camera_controls
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 06_render_targets
+      working-directory: 06_render_targets
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 07_multiple_render_targets
+      working-directory: 07_multiple_render_targets
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 08_float_render_targets
+      working-directory: 08_float_render_targets
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 09_depth_render_targets
+      working-directory: 09_depth_render_targets
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 10_cubemap
+      working-directory: 10_cubemap
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 11_instanced_rendering
+      working-directory: 11_instanced_rendering
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 12_set_render_target_depth
+      working-directory: 12_set_render_target_depth
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 13_generate_mipmaps
+      working-directory: 13_generate_mipmaps
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 14_set_mipmap
+      working-directory: 14_set_mipmap
+      run: ../Kinc/make linux -g opengl --compile
+    - name: Compile 15_deinterleaved_buffers
+      working-directory: 15_deinterleaved_buffers
+      run: ../Kinc/make linux -g opengl --compile
